# chat-rs

./: .env  Cargo.toml  docker-compose.yml
apps/api/: Cargo.toml
apps/api/src/: config.rs  lib.rs  main.rs
apps/api/src/handlers/: auth.rs  health.rs
apps/api/src/middleware/: auth.rs
apps/api/src/websocket/: connection.rs  handler.rs  messages.rs
apps/api/tests/: auth_test.rs
crates/application/: Cargo.toml
crates/application/src/auth/: dtos.rs  use_cases.rs
crates/application/src/chat/: dtos.rs  mod.rs  update_status.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/entities/: conv_members.rs  conversations.rs  device_linking_sessions.rs  devices.rs  message_deliveries.rs  messages.rs  mod.rs  one_time_prekeys.rs  prelude.rs  push_tokens.rs  signal_sessions.rs  users.rs
crates/core/src/signal/: wrapper.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: database.rs  lib.rs  redis.rs
crates/infrastructure/src/crypto/: signal.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: lib.rs
migration/src/: lib.rs  m20251202000010_create_otp_verifications.rs  m20251207000001_add_pin_to_users.rs  m20251207000002_add_device_type_to_devices.rs  m20251207000003_create_device_linking_sessions.rs
migrations/: 20251201000005_create_conversations.rs  20251201000007_create_messages.rs
