[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
sea-orm.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
hkdf.workspace = true
aes-gcm.workspace = true
anyhow.workspace = true
